tinyc/test/bad/array-forwarded-struct.c
struct s;

int main()
{
    struct s x[ 2 ];

    return 0;
}

